maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:40: error: not found: value x
    setIndication(x,y,N+1)
                  ^ShortestPathMaze:40: error: not found: value y
    setIndication(x,y,N+1)
                    ^ShortestPathMaze:42: error: not found: value x
    setIndication(x,y,S+1)
                  ^ShortestPathMaze:42: error: not found: value y
    setIndication(x,y,S+1)
                    ^ShortestPathMaze:44: error: not found: value x
    setIndication(x,y,E+1)
                  ^ShortestPathMaze:44: error: not found: value y
    setIndication(x,y,E+1)
                    ^ShortestPathMaze:46: error: not found: value x
    setIndication(x,y,W+1)
                  ^ShortestPathMaze:46: error: not found: value y
    setIndication(x,y,W+1)
                    ^